--- a/button.html
+++ b/button.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="center">
       <button class="btn" id="dynamicButton">
-        <svg width="215" height="60" viewBox="0 0 215 60" xmlns="http://www.w3.org/2000/svg">
+        <svg class ="svg_line" width="215" height="60" viewBox="0 0 215 60" xmlns="http://www.w3.org/2000/svg">
           <rect x="0" y="0" width="215" height="60" rx="3.2rem" ry="3.2rem" fill="none"></rect>
         </svg>
         <span>Смотреть Бесплатно</span>
@@ -48,16 +48,17 @@
     height: 60px;
     cursor: pointer;
     background: rgba(0, 0, 0, 0.044);
-    border: 2px solid rgb(61, 129, 206);
+    border: none;
     outline: none;
     transition: 0.3s ease-in-out;
     }
   
-    svg {
+    .svg_line {
     font-family: Graphik Kinopoisk LC Web,Tahoma,Arial,Verdana,sans-serif;
     font-size: 100%;
     line-height: 1.15;
     text-transform: none;
+    overflow: visible;
     cursor: pointer;
     width: 215px;
     height: 60px;
@@ -65,20 +66,20 @@
     left: 0;
     top: 0;
     fill: none;
-    stroke: #ffffff;
+    stroke: rgb(61, 129, 206);
     stroke-width: 0.2rem;
-    stroke-dasharray: 150 498;
-    stroke-dashoffset: 150;
+    stroke-dasharray: 498;
+    stroke-dashoffset: 0;
     transition: 0.7s ease-in-out;
     }
   
   .btn:hover {
-  transition: 0.3s ease-in-out;
+  transition: 1s ease-in-out;
   background: rgb(61, 129, 206);
   }
   
   .btn:hover svg {
-  stroke-dashoffset: -498;
+  stroke-dashoffset: 498;
   }
   
   .btn span {
